--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,4 +1,6 @@
+<div style="position: absolute; left: 20%">
 <cart-bar class="pull-right"></cart-bar>
+</div>
 
 <div class="header-image">
   <div class="header-block">
