--- a/src/app/components/user/profile/profile-admin/profile-admin.component.html
+++ b/src/app/components/user/profile/profile-admin/profile-admin.component.html
@@ -73,15 +73,15 @@
       <thead>
       <tr>
         <th scope="col">#</th>
-        <th scope="col">USERS</th>
-        <th scope="col">PRODUCTS</th>
+        <th scope="col">Users</th>
+        <th scope="col">Products</th>
       </tr>
       </thead>
       <tbody>
       <tr>
         <th scope="row">NUMBER</th>
-        <td>100</td>
-        <td>87</td>
+        <td>{{users.length}}</td>
+        <td>{{products.length}}</td>
       </tr>
       </tbody>
     </table>
