--- a/src/app/components/user/profile/profile-seller/profile-seller.component.html
+++ b/src/app/components/user/profile/profile-seller/profile-seller.component.html
@@ -126,7 +126,7 @@
           </div>
 
           <!--<strong style="width: 50%; float: left" class="continue-shopping" ><a routerLink="/seller/{{userId}}/products/new">continue add products</a></strong>-->
-          <strong class="continue-shopping"> <a routerLink="/seller/{{userId}}/products/new">continue add products</a></strong>
+          <strong class="continue-shopping"> <a routerLink="/seller/{{userId}}/products/new">Continue Add Products</a></strong>
           <br/>
           <br/>
           <strong class="continue-shopping" > <a routerLink="/seller/{{userId}}/products"> My Product List</a></strong>
