--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -57,7 +57,7 @@
   <div *ngIf="errorFlag" class="alert alert-danger">
     {{errorMsg}}
   </div>
-  <h1>{{userType}} Register</h1>
+  <h1 class="header-text-title-pro product-title-pro">{{userType}} Register</h1>
   <form>
 
     <div class="register-bg" style="position: absolute; width: 60%; height: 250px; top: 250px; left: 18%">
