--- a/src/app/components/products/product-create/product-create.component.html
+++ b/src/app/components/products/product-create/product-create.component.html
@@ -1,5 +1,20 @@
+
+<nav class="navbar" style="margin: 0px">
+  <div class="row container" >
+    <div class="pull-right" style="position: absolute; right: 20px">
+      <button type="button" routerLink="../.." class="btn btn-outline-secondary">BACK TO PROFILE</button>
+      <button type="button" routerLink="/" class="btn btn-outline-secondary">HOMEPAGE</button>
+      <button type="button" routerLink="../" class="btn btn-outline-secondary">MY PRODUCTS</button>
+    </div>
+  </div>
+</nav>
+
+
 <div class="page_admin-add">
-  <h1 class="page_admin-add-title"> Adding new Item</h1>
+  <h2 class="page_admin-add-title"> Adding new Item</h2>
+  <!--<div class="pull-right" style="position: absolute; right: 30px">-->
+    <!--<button type="button" routerLink="/" class="btn btn-outline-secondary">BACK</button>-->
+  <!--</div>-->
 </div>
 
 <div class="page_admin-add bg-create">
@@ -56,9 +71,9 @@
 
       </div>
 
-      <div class="quick-cart-footer" style="position: relative; width: 60%; height: 200px; left: 50%; top:80px; margin: 0 0 0 -30%">
-        <button class="button button-secondary button-large" (click)="addProduct()">ADD TO MY PRODUCT LIST</button>
-      </div>
+      <!--<div class="quick-cart-footer" style="position: relative; width: 60%; height: 200px; left: 50%; top:80px; margin: 0 0 0 -30%">-->
+        <button class="button button-secondary button-large" style="position: relative; width: 40%; height: 40px; left: 50%; top:130px; margin: 0 0 0 -30%"(click)="addProduct()">ADD TO MY PRODUCT LIST</button>
+      <!--</div>-->
     </div>
   </form>
 
