--- a/src/app/components/products/product-list/product-list.component.css
+++ b/src/app/components/products/product-list/product-list.component.css
@@ -59,9 +59,9 @@
 .image-container:hover .overlay{
   opacity: 1;
 }
-.overlay {
+.overlay-list {
   transition: .5s ease;
-  opacity: 0;
+  opacity: 0.3;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -69,11 +69,11 @@
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%)
 }
-.overlay .button {
+.overlay-list .button {
   width: 160px;
-  line-height: 38px;
+  line-height: 30px;
 }
-.overlay .button:first-child {
+.overlay-list .button:first-child {
   margin-bottom: 2em;
 }
 .product-details {
@@ -117,4 +117,48 @@
   border-style:solid;
   border-width: 0 15px;
   display:table;
+}
+
+
+.button {
+  display: inline-block;
+  padding: 0 30px;
+  color: black;
+  text-align: center;
+  font-size: 0.85em;
+  font-weight: 600;
+  letter-spacing: .15rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 1px solid #3b3d38;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+.button.button-primary {
+  color: #fff;
+  background-color: #3b3d38;
+  border-color: #3b3d38;
+}
+.button.button-primary:hover {
+  color: #fff;
+  background-color: #52525b;
+  border-color: #52525b;
+}
+.button.button-secondary {
+  color: #1d1d20;
+  background-color: #000000;
+  border-color: #1d1d20;
+}
+.button.button-secondary:hover {
+  color: #000000;
+  background-color: #8e8e90;
+  border-color: #8e8e90;
+}
+.button.button-wide {
+  width: 80%;
+}
+.button.button-large {
+  padding: 10px 10px;
 }
