--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -16,7 +16,7 @@
     <div class="col-md-4 col-sm-6" *ngFor="let product of products;let i = index">
       <div class="image-container-list">
         <div class="product-image" [ngStyle]="{'background-image': 'url(./assets/uploads/' + product.imageUrl + ')'}"></div>
-        <div class="overlay">
+        <div class="overlay-list">
           <div class="button button-primary" routerLink= "/user/{{userId}}/products/product/edit/{{products[i]._id}}">Edit Details</div>
         </div>
       </div>
@@ -28,4 +28,5 @@
     </div>
   </div>
 </div>
+
 
