--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -81,6 +81,69 @@
 
 
 
+<!--<nav class="navbar" style="margin: 0px">-->
+  <!--<div class="row container" >-->
+    <!--<div class="pull-right" style="position: absolute; right: 20px">-->
+      <!--<button type="button" routerLink="/" class="btn btn-outline-secondary">HOMEPAGE</button>-->
+      <!--<button type="button" routerLink="/" class="btn btn-outline-secondary">GO TO LOGIN</button>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</nav>-->
+
+<!--<div class="bg-profile" style="height: 600px; width: 100%">-->
+    <!--<div *ngIf="errorFlag" class="alert alert-danger">-->
+      <!--{{errorMsg}}-->
+    <!--</div>-->
+    <!--<h1 >My Profile</h1>-->
+    <!--<div *ngIf="errorFlag" class="alert alert-danger">-->
+    <!--{{errorMsg}}-->
+    <!--</div>-->
+
+    <!--<div *ngIf="updateFlag" class="alert alert-info">-->
+    <!--{{updateMsg}}-->
+    <!--</div>-->
+  <!--<div class="container pull-left"  style="position:relative;top: 12%; width: 40%">-->
+    <!--<form class="register-bg -align-center" style="position: relative; height: 300px;">-->
+
+      <!--&lt;!&ndash;<div class="register-bg" style="position: relative; width: 70%; height: 400px;">&ndash;&gt;-->
+
+        <!--<div class="container">-->
+
+          <!--<div class="form-group">-->
+            <!--<label >Username</label>-->
+            <!--<input [(ngModel)]="user.username" type="text" class="input-style" name="username" placeholder="jannunzi">-->
+          <!--</div>-->
+
+          <!--<div class="form-group">-->
+            <!--<label>Email</label>-->
+            <!--<input [(ngModel)]="user.email" type="text" class="input-style" name="email" placeholder="jannunzi@gmail.com">-->
+          <!--</div>-->
+
+          <!--<div class="form-group">-->
+            <!--<label >User Type</label>-->
+            <!--<input [(ngModel)]="user.userType" type="text" class="input-style" name="lastName" placeholder="user">-->
+          <!--</div>-->
+
+          <!--<div class="text-capitalize">-->
+            <!--<button class="button button-secondary button-large-pro button-wide-pro"> <a routerLink="/category">Continue Shopping</a></button>-->
+            <!--<br/>-->
+            <!--<br/>-->
+            <!--<button class="button button-secondary button-large-pro button-wide-pro"> <a routerLink="/category">Continue Shopping</a></button>-->
+          <!--<br/>-->
+          <!--<br/>-->
+            <!--<button class="button button-secondary button-large-pro button-wide-pro"> <a routerLink="/user/{{user._id}}/cart">My Cart</a></button>-->
+          <!--</div>-->
+      <!--</div>-->
+      <!--<br/>-->
+      <!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+    <!--</form>-->
+  <!--</div>-->
+<!--</div>-->
+
+
+
+
 <nav class="navbar" style="margin: 0px">
   <div class="row container" >
     <div class="pull-right" style="position: absolute; right: 20px">
@@ -90,24 +153,24 @@
   </div>
 </nav>
 
-<div class="bg-profile">
+<div class="bg-profile cart-total">
   <div class="container">
     <div *ngIf="errorFlag" class="alert alert-danger">
       {{errorMsg}}
     </div>
     <h1 >My profile</h1>
     <div *ngIf="errorFlag" class="alert alert-danger">
-    {{errorMsg}}
+      {{errorMsg}}
     </div>
 
     <div *ngIf="updateFlag" class="alert alert-info">
-    {{updateMsg}}
+      {{updateMsg}}
     </div>
     <form>
 
-      <div class="register-bg" style="position: absolute; width: 70%; height: 300px; top: 250px; left: 15%">
+      <div class="register-bg" style="position: absolute; width: 65%; height: 360px; top: 200px; left: 15%">
 
-        <div class="product-page-container" style="position: relative; left: 25%; top: 15%; align-items: center">
+        <div class="product-page-container" style="position: relative; top: 40px; margin: 0 auto" >
 
           <div class="form-group">
             <label >Username</label>
@@ -124,16 +187,24 @@
             <input [(ngModel)]="user.userType" type="text" class="input-style" name="lastName" placeholder="user">
           </div>
 
-            <strong class="continue-shopping"> <a routerLink="/category">continue shopping</a></strong>
+          <!--<strong style="width: 50%; float: left" class="continue-shopping" ><a routerLink="/seller/{{userId}}/products/new">continue add products</a></strong>-->
+          <!--<button class="button button-secondary button-large-pro button-wide-pro"> <a routerLink="/category">Continue Shopping</a></button>-->
+          <strong class="continue-shopping" (click)="updateUser()"> <a routerLink="./">Update</a></strong>
           <br/>
           <br/>
-            <strong class="checkout-button"> <a routerLink="/user/{{user._id}}/cart">My Cart</a></strong>
-      </div>
-      <br/>
+          <!--<button class="button button-secondary button-large-pro button-wide-pro"> <a routerLink="/category">Continue Shopping</a></button>-->
+          <strong class="continue-shopping"> <a routerLink="/category">Continue Shopping</a></strong>
+          <br/>
+          <br/>
+          <strong class="continue-shopping"> <a routerLink="/user/{{user._id}}/cart">My Cart</a></strong>
+          <!--<button class="button button-secondary button-large-pro button-wide-pro"> <a routerLink="/user/{{user._id}}/cart">My Cart</a></button>-->
+        </div>
+        <br/>
       </div>
 
     </form>
   </div>
 </div>
+
 
 
