--- a/src/app/components/user/register/register.component.css
+++ b/src/app/components/user/register/register.component.css
@@ -20,10 +20,10 @@
   vertical-align: middle;
   display: table-cell;
 }
-.header-text-title {
+.header-text-title-pro {
   display: inline-block;
-  font-size: 30px;
-  font-weight: 500;
+  font-size: 15px;
+  font-weight: 200;
   padding-bottom:10px;
   border-bottom: 1px solid white;
 }
@@ -86,15 +86,16 @@
   margin: .5em 0;
   color: #7d7d7d;
 }
-.product-title {
+.product-title-pro {
   text-transform: uppercase;
   letter-spacing: .05em;
   margin-top: 0;
   margin-bottom: .5em;
-  font-size: 1em;
+  font-size: 2em;
   line-height: 1.2;
   font-weight: 400;
   font-family: Roboto;
+  color: black;
 }
 .product-price {
   font-size: 1.14286em;
